verif/test/deca/syntax/invalid/provided/chaine_incomplete-verif.res
src/test/deca/syntax/invalid/provided/chaine_incomplete.deca:10:0: token recognition error at: '"chaine pas finie\n'
